[gd_scene load_steps=2 format=3 uid="uid://bcehwuwi7ndl8"]

[ext_resource type="Script" path="res://assets/scripts/menus/pausemenu.gd" id="1"]

[node name="pausemenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="restart" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="options" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="mainmanu" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 217.0
color = Color(0, 0, 0, 0.498039)

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mainmanu" to="." method="_on_mainmanu_pressed"]
